Reflecting review feedback.